NO-ISSUE: make config owned
